-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 16.0.1, Qt Creator 16.0.2
-
None
-
-
1d126dede (17.0), 82aac10e5 (master)
When installing a plugin from the Qt Creator Extension Store, the process involves downloading, extracting, and displaying a summary window. After clicking "Finish" in the summary window, the GUI freezes noticeably when the plugin contains many files or is of considerable size. For example, this issue is reproducible with the ~60MB Qt AI Assistant plugin, which includes numerous small files.
The freeze is not noticeable with smaller plugins but becomes evident with larger plugins, impacting the user experience by making the application unresponsive during installation.
Expected Behavior:
The Qt Creator GUI remains responsive throughout the plugin installation process, regardless of plugin size or file count.
Actual Behavior:
The GUI freezes noticeably when installing large plugins with many files, causing a poor user experience.
Plugin tested: Qt AI Assistant 0.9.2 (~60MB) from Extension store: https://qtc-extension-service-staging-1deaeac425c6.herokuapp.com
No error messages are displayed during the freeze.
The issue does not prevent installation but affects usability.
For Gerrit Dashboard: QTCREATORBUG-33069 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
654343,8 | Core: Show progress during plugin installation | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
655153,2 | Core: Remove xattr call when installing plugins | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |