Core: Show progress during plugin installation

Add a bool return value to the postCopyOperation so we can cancel
the copy from it.

Delete the installation folder if the copy failed or was interrupted by the user.

Fixes: QTCREATORBUG-33069
Change-Id: Iee6c77b8f67df8249c1c4571c409bc3c3697af56
Reviewed-by: Eike Ziller <eike.ziller@qt.io>